# Taylor

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Taylor.cpp  Taylor.h  config.h
src/test/: test.cpp
src/ui/: ui.cpp  ui.h
